# ChangeLog for net-misc/modemmanager
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/modemmanager/ChangeLog,v 1.2 2009/09/22 14:02:07 dagger Exp $

  22 Sep 2009; Robert Piasek <dagger@gentoo.org>
  modemmanager-0.2_p20090824.ebuild:
  Added ARM keyword

*modemmanager-0.2_p20090806 (13 Aug 2009)

  13 Aug 2009; Robert Piasek <dagger@gentoo.org>
  +modemmanager-0.2_p20090806.ebuild, +metadata.xml:
  Initial ebuild of modemmanager
