@@ -1,4 +1,6 @@
 DIST ModemManager-0.2_p20090824.tar.bz2 300605 RMD160 4a29db6af6e1d5bd70455b1fab55ed6745c56da8 SHA1 23097f2d3f8057faa3dcc0a1eb09f521214a5353 SHA256 74ffd8861780cf02f784b68765cda0c70a4f1dea6eef8385ec04c70029bd9858
+DIST ModemManager-0.2_p20090925.tar.bz2 302700 RMD160 bed634edb1e50fb351ba955c7b4659bb22d4a104 SHA1 11a9407b18ba31e741d1c003bd51ea6b17363cf5 SHA256 81b0ea50d5f3e7cfb582b08330d3f8eb1f59f4c8a6503fde19d1d1be852518cb
 EBUILD modemmanager-0.2_p20090824.ebuild 874 RMD160 b509c6e6c458f0133dff5eaf968496e5a18f4d22 SHA1 0148a7a451014e8c0e3c9657916148ec654de9c9 SHA256 56eac76a1f1ac81edfb373fd91b98b147bfc2411ed16f2941dfc698717cec11e
-MISC ChangeLog 501 RMD160 b25894f67b045e0601af4da4bbccc01d7b2b3552 SHA1 e64c6bf46cd21b36bacff0f3e5d63c00f9cc945e SHA256 f6114ad512498143424220cfdea3eef305b58bbc57a9d34af1987b28dd57c0ab
+EBUILD modemmanager-0.2_p20090925.ebuild 874 RMD160 cef890284b505e1c1a4f894feb20e28dca78e0f4 SHA1 0081acc29396f07df4570cdad050643605155522 SHA256 07686c49f6496125ed7d28237d07ed68077f5c2f3f00f7315aa6f70381a013cc
+MISC ChangeLog 647 RMD160 0f9853a72c856096c83db0bbbd74deb840d78798 SHA1 6260bee76573df4cb32bf9bd3599a9f1c97b6ebb SHA256 95b161aaa79358a2bfb692ad073d4311f8c3ae3ee71aef935210b744f15db4ec
 MISC metadata.xml 296 RMD160 d8f057fffd0d6d3c84b2d5481481f8848cc7f5aa SHA1 d3e950b1ca7636e89f44d3182753cb2384dcd11c SHA256 996385c7eb65b2fe398df26ebb0da85233a4f6c135a1256da9c53bd96ad450f4
