@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/modemmanager
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/modemmanager/ChangeLog,v 1.2 2009/09/22 14:02:07 dagger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/modemmanager/ChangeLog,v 1.3 2009/09/25 10:53:35 dagger Exp $
+
+*modemmanager-0.2_p20090925 (25 Sep 2009)
+
+  25 Sep 2009; Robert Piasek <dagger@gentoo.org>
+  +modemmanager-0.2_p20090925.ebuild:
+  new snapshot
 
   22 Sep 2009; Robert Piasek <dagger@gentoo.org>
   modemmanager-0.2_p20090824.ebuild:
